docs: add best practices and tune Tomcat server.xml for production
- Add comprehensive Best Practices section to README.md
- Optimize server.xml connector settings (keep-alive)
- Enhance RemoteIpValve configuration for better proxy support
- Add .cursor/ to .gitignore